# cerberus

./: .mergify.yml  .pre-commit-config.yaml  .sourcery.yaml  CHANGELOG.md  Makefile  README.rst  flake.nix  manage.py  package-lock.json  package.json  pyproject.toml  requirements.dev.txt  requirements.txt
.github/workflows/: changelog.yml  main.yml  version.yml
assets/css/: FAB.css  actions.css  invoice-form.css  layout.css  main.css
assets/typescript/: main.ts
assets/typescript/components/: utils.ts
assets/typescript/htmx/: auto-target.ts  remove.ts
cerberus/: admin.py  api.py  apps.py  decorators.py  exceptions.py  fields.py  filters.py  middleware.py  model_utils.py  pagination.py  permissions.py  reports.py  rules.py  serializers.py  settings.py  utils.py  widgets.py
cerberus/forms/: __init__.py  booking.py  charge.py  contact.py  customer.py  invoice.py  pet.py  service.py  vet.py
cerberus/management/commands/: anonymise.py  clean_slots.py  dummydata.py  fixcustomers.py  invalid_bookings.py
cerberus/migrations/: 0079_alter_charge_customer.py  0080_alter_bookingcharge_booking.py  0081_bookingschedule.py  0082_booking_schedule_alter_bookingschedule_end_date.py  0083_auto_20241118_2126.py
cerberus/models/: __init__.py  address.py  booking.py  charge.py  contact.py  customer.py  invoice.py  pet.py  service.py  user_settings.py  vet.py
cerberus/services/: planner.py
cerberus/templates/cerberus/: booking_calender_day.html  booking_calender_month.html  booking_calender_year.html  booking_completable.html  booking_detail.html  booking_list.html  booking_test.html  contact_form.html  customer_charges.html  customer_detail.html  customer_list.html  dashboard.html  default_confirm_delete.html  default_form.html  invoice_charge_row.html  invoice_detail.html  invoice_email_confirm.html  invoice_email_sent.html  invoice_form.html  invoice_list.html  invoice_send_form.html  invoiceable.html  pet_detail.html  pet_form.html  pet_list.html  service_detail.html  service_list.html  vet_detail.html  vet_list.html
cerberus/templates/cerberus/components/: add_booking_fab.html  add_invoice_fab.html  booking_list.html  booking_row.html  charge_form.html  customer_list.html  invoice_list.html  invoice_row.html  pet_list.html  service_list.html  sort_item.html  vet_list.html
cerberus/templatetags/: components.py  date_utils.py  debug_tags.py  field_tags.py  human_duration.py  paginator_tags.py  string_utils.py
cerberus/tests/: __init__.py  test_address.py  test_bookings.py  test_charges.py  test_component_tag.py  test_contacts.py  test_customer.py  test_htmx_middleware.py  test_invoices.py  test_serializers.py  test_string_utils.py  test_utils.py
cerberus/urls/: api.py  urls.py
cerberus/views/: __init__.py  booking.py  crud_views.py  customer.py  invoice.py  pets.py  transition_view.py  views.py
cerberus_crm/: urls.py  views.py
cerberus_crm/settings/: base.py  dev.py  production.py
cerberus_crm/static/css/: main.min.css
cerberus_crm/static/js/: main.min.js  main.min.js.map
templates/: base_html.html  base_htmx.html
templates/components/: pagination.html
templates/pico/: field.html  table_inline_formset.html  whole_uni_formset.html
templates/pico/layout/: checkboxselectmultiple.html  radioselect.html
templates/registration/: login.html
(+6 files in other folders)
