[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
  "setuptools-scm",
  "wheel",
]

[project]
name = "cerberus"
version = "0.2.0"
description = "Cerberus, the dog walkers CRM"
readme = "README.rst"
license = { file = "LICENSE" }
authors = [
  { name = "Ben Gosney", email = "bengosney@googlemail.com" },
]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "crispy-bulma",
  "dj-database-url",
  "django>=5",
  "django-cors-headers",
  "django-crispy-forms",
  "django-extensions",
  "django-filter",
  "django-fsm-2",
  "django-fsm-admin2",
  "django-fsm-log",
  "django-htmx",
  "django-model-utils",
  "django-money",
  "django-polymorphic",
  "django-reversion",
  "django-sqids",
  "django-taggit",
  "django-vanilla-views",
  "django-zeal",
  "djangorestframework",
  "djangorestframework-simplejwt[crypto]",
  "drf-spectacular",
  "gunicorn",
  "humanize",
  "markdown",
  "mjml-python",
  "psycopg2",
  "python-bidi==0.6.*",
  "pytz",
  "reportlab==4.2.5",
  "uritemplate",
  "wheel",
  "whitenoise",
  "xhtml2pdf",
]
optional-dependencies.dev = [
  "black",
  "cogapp",
  "commitizen",
  "django-browser-reload",
  "django-debug-toolbar",
  "django-debugtools",
  "django-stubs",
  "djangorestframework-stubs",
  "faker",
  "freezegun",
  "graphviz",
  "hypothesis[django]",
  "icecream",
  "model-bakery",
  "mypy",
  "pip-tools",
  "pre-commit",
  "pytest",
  "pytest-clarity",
  "pytest-cov",
  "pytest-django",
  "pytest-django-queries",
  "pytest-freezegun",
  "ruff",
  "setuptools-scm",
  "types-python-dateutil",
]
urls.homepage = "https://cerberus.stretchtheirlegs.co.uk/"
urls.repository = "http://www.github.com/bengosney/cerberus"

[tool.setuptools.package-data]
cerberus = [
  "templates/cerberus/*.html",
  "templates/cerberus/*.svg",
]

[tool.setuptools_scm]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [ "migrations" ]

format.indent-style = "space"
format.quote-style = "double"
format.docstring-code-format = true

lint.select = [ "C90", "DJ", "E", "ERA", "F", "FURB", "I", "N", "PERF", "PL", "RUF", "TRY", "UP" ]

lint.isort.section-order = [
  "future",
  "standard-library",
  "third-party",
  "django",
  "wagtail",
  "first-party",
  "local-folder",
]

lint.isort.sections.django = [ "django" ]
lint.isort.sections.wagtail = [ "wagtail" ]

[tool.coverage.run]
source = [
  "cerberus",
  "cerberus_crm",
]

[tool.mypy]
plugins = [
  "mypy_django_plugin.main",
  "mypy_drf_plugin.main",
]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true

[tool.django-stubs]
django_settings_module = "cerberus_crm.settings"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver2"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
